--- a/index.html
+++ b/index.html
@@ -135,12 +135,8 @@
         <section class="section section-gap about">
             <div class="container">
                 <div class="about__inner">
-                    <svg class="about__decoration about__decoration-mobile about__decoration-mobile-top">
-                        <use href="/img/icons/sprite.svg#decoration-mobile-left"></use>
-                    </svg>
-                    <svg class="about__decoration about__decoration--left">
-                        <use href="/img/icons/sprite.svg#decoration1"></use>
-                    </svg>
+                    <img class="about__decoration about__decoration-mobile about__decoration-mobile-top" src="img/decoration-mobile-left.svg" alt="">
+                    <img class="about__decoration about__decoration--left" src="img/decoration1.svg" alt="">
                     <div class="about__texts">
                         <h2 class="about__title title-label">
                             our product
@@ -152,12 +148,8 @@
                             The Best Coffee Beans in the World
                         </div>
                     </div>
-                    <svg class="about__decoration about__decoration-mobile about__decoration-mobile-bottom">
-                        <use href="/img/icons/sprite.svg#decoration-mobile-right"></use>
-                    </svg>
-                    <svg class="about__decoration about__decoration--right">
-                        <use href="/img/icons/sprite.svg#decoration2"></use>
-                    </svg>
+                    <img class="about__decoration about__decoration-mobile about__decoration-mobile-bottom" src="img/decoration-mobile-right.svg" alt="">
+                    <img class="about__decoration about__decoration--right" src="img/decoration2.svg" alt="">
                 </div>
             </div>
         </section>
