--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="intro__images">
-                        <img src="img/intro-left.png" alt="" class="intro__image intro__image--left">
+                        <img src="img/intro-left.jpg" alt="" class="intro__image intro__image--left">
                         <div class="intro__images-middle">
                             <a href="#" class="twobean-btn twobean-btn--orange intro__link buy-now">
                                 Buy now
