catalog.html added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
+    <title>Main page</title>
     <link rel="stylesheet" href="css/libs/normalize.css">
     <link rel="stylesheet" href="css/libs/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/libs/fancybox.css">
@@ -13,7 +13,7 @@
     <header id="header" class="header">
     <div class="container">
         <div class="header__inner">
-            <a href="#" class="logo header__logo">
+            <a href="index.html" class="logo header__logo">
                 <img src="img/logo.png" alt="" class="logo__img header__logo-img">
             </a>
             <ul class="social header__social header__social--mobile">
@@ -38,7 +38,7 @@
                 <nav class="nav header__nav">
                     <ul class="nav__list header__nav-list">
                         <li class="nav__item header__nav-item">
-                            <a class="nav__link header__nav-link" href="#">
+                            <a class="nav__link header__nav-link" href="catalog.html">
                                 Products
                             </a>
                         </li>
