--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="catalog__inner">
                     <div class="product-card catalog__card">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-1.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -122,12 +122,12 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     DRIP COFFEE LIGHT
                                 </a>
                             </div>
                             <div class="product-card__middle">
-                                <a href="#" class="product-card__buy buy-now">
+                                <a href="product.html" class="product-card__buy buy-now">
                                     Buy now
                                     <svg>
                                         <use href="/img/icons/sprite.svg#cart"></use>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="product-card catalog__card product-card--medium">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-2.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -148,12 +148,12 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     Drip Coffee Medium
                                 </a>
                             </div>
                             <div class="product-card__middle">
-                                <a href="#" class="product-card__buy buy-now">
+                                <a href="product.html" class="product-card__buy buy-now">
                                     Buy now
                                     <svg>
                                         <use href="/img/icons/sprite.svg#cart"></use>
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class="product-card catalog__card product-card--medium-dark">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-3.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -174,12 +174,12 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     Drip Coffee Medium Dark
                                 </a>
                             </div>
                             <div class="product-card__middle">
-                                <a href="#" class="product-card__buy buy-now">
+                                <a href="product.html" class="product-card__buy buy-now">
                                     Buy now
                                     <svg>
                                         <use href="/img/icons/sprite.svg#cart"></use>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="product-card catalog__card product-card--orange">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-4.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -200,12 +200,12 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     Drip Coffee COLLECTION
                                 </a>
                             </div>
                             <div class="product-card__middle">
-                                <a href="#" class="product-card__buy buy-now">
+                                <a href="product.html" class="product-card__buy buy-now">
                                     Buy now
                                     <svg>
                                         <use href="/img/icons/sprite.svg#cart"></use>
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div class="product-card catalog__card product-card--pink">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-3.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -226,12 +226,12 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     Drip Coffee decaf
                                 </a>
                             </div>
                             <div class="product-card__middle">
-                                <a href="#" class="product-card__buy buy-now">
+                                <a href="product.html" class="product-card__buy buy-now">
                                     Buy now
                                     <svg>
                                         <use href="/img/icons/sprite.svg#cart"></use>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                     <div class="product-card catalog__card product-card--green">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-3.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -252,12 +252,12 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     Drip Coffee electrolytes
                                 </a>
                             </div>
                             <div class="product-card__middle">
-                                <a href="#" class="product-card__buy buy-now">
+                                <a href="product.html" class="product-card__buy buy-now">
                                     Buy now
                                     <svg>
                                         <use href="/img/icons/sprite.svg#cart"></use>
@@ -269,6 +269,7 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </section>
