--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="products__inner">
                     <div class="product-card products__card product-card--md-row">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-1.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -229,7 +229,7 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     DRIP COFFEE LIGHT
                                 </a>
                             </div>
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                     <div class="product-card products__card product-card--medium product-card--md-row">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-2.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -275,7 +275,7 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     Drip Coffee Medium
                                 </a>
                             </div>
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                     <div class="product-card products__card product-card--medium-dark product-card--md-row">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-3.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__info">
@@ -324,7 +324,7 @@
                                 <span class="product-card__bag">
                                     10 bags
                                 </span>
-                                <a href="#" class="product-card__title">
+                                <a href="product.html" class="product-card__title">
                                     Drip Coffee Medium Dark
                                 </a>
                             </div>
@@ -365,7 +365,7 @@
                         </div>
                     </div>
                     <div class="product-card product-card--orange products__card product-card--subscription product-card--row products__card--full">
-                        <a href="#" class="product-card__thumb">
+                        <a href="product.html" class="product-card__thumb">
                             <img src="img/product-4.jpg" alt="" class="product-card__img">
                         </a>
                         <div class="product-card__right">
@@ -374,12 +374,12 @@
                                     <span class="product-card__bag">
                                         10 bags
                                     </span>
-                                    <a href="#" class="product-card__title">
+                                    <a href="product.html" class="product-card__title">
                                         DRIP COFFEE LIGHT
                                     </a>
                                 </div>
                                 <div class="product-card__middle">
-                                    <a href="#" class="product-card__buy buy-now">
+                                    <a href="product.html" class="product-card__buy buy-now">
                                         Buy now
                                         <svg>
                                             <use href="/img/icons/sprite.svg#cart"></use>
