added business.html events.html about.html pages

--- a/product.html
+++ b/product.html
@@ -43,17 +43,17 @@
                             </a>
                         </li>
                         <li class="nav__item header__nav-item">
-                            <a class="nav__link header__nav-link" href="#">
+                            <a class="nav__link header__nav-link" href="business.html">
                                 Business
                             </a>
                         </li>
                         <li class="nav__item header__nav-item">
-                            <a class="nav__link header__nav-link" href="#">
+                            <a class="nav__link header__nav-link" href="events.html">
                                 Events
                             </a>
                         </li>
                         <li class="nav__item header__nav-item">
-                            <a class="nav__link header__nav-link" href="#">
+                            <a class="nav__link header__nav-link" href="about.html">
                                 About
                             </a>
                         </li>
@@ -318,39 +318,39 @@
                     </div>
                 </div>
             </section>
-            <section class="section section-gap-60-top product__recomendation">
+            <section class="section section-gap-60-top product__recommendation">
                 <div class="container">
                     <div class="section__header section__header--mobile-center">
                         <h2 class="title-label">
                             recommendation
                         </h2>
                     </div>
-                    <div class="product__recomendation-inner">
-                        <div class="product__recomendation-info">
-                            <h3 class="product__recomendation-title">
+                    <div class="infoblock">
+                        <div class="infoblock__info">
+                            <h3 class="infoblock__title">
                                 How to store coffee to keep it fresh?
                             </h3>
-                            <div class="product__recomendation-description">
+                            <div class="infoblock__description">
                                 <p>
                                     To keep your coffee as fresh as possible, we recommend storing it in an airtight container at room temperature. Avoid exposure to direct sunlight, excessive heat, or moisture, as these can affect the coffee’s flavor and freshness. Ideally, coffee should be consumed within a month of opening to enjoy its peak flavor. If you’ve purchased coffee in bulk, consider dividing it into smaller portions and only opening what you need.
                                 </p>
                             </div>
-                            <div class="product__recomendation-tags">
-                                <span class="product__recomendation-tag tag">
+                            <div class="infoblock__tags">
+                                <span class="infoblock__tag tag">
                                     #fresh
                                 </span>
-                                <span class="product__recomendation-tag tag">
+                                <span class="infoblock__tag tag">
                                     #coffee
                                 </span>
-                                <span class="product__recomendation-tag tag">
+                                <span class="infoblock__tag tag">
                                     #safekeeping
                                 </span>
                             </div>
                         </div>
-                        <div class="product__recomendation-thumb">
+                        <div class="infoblock__thumb">
                             <picture>
                                 <source media="(max-width: 992px)" srcset="img/rec-mobile.jpg">
-                                <img src="img/rec.png" alt="" class="product__recomendation-img">
+                                <img src="img/rec.png" alt="" class="infoblock__img">
                             </picture>
                         </div>
                     </div>
