--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                             </a>
                         </li>
                         <li class="nav__item header__nav-item">
-                            <a class="nav__link header__nav-link" href="#">
+                            <a class="nav__link header__nav-link" href="business.html">
                                 Business
                             </a>
                         </li>
                         <li class="nav__item header__nav-item">
-                            <a class="nav__link header__nav-link" href="#">
+                            <a class="nav__link header__nav-link" href="events.html">
                                 Events
                             </a>
                         </li>
                         <li class="nav__item header__nav-item">
-                            <a class="nav__link header__nav-link" href="#">
+                            <a class="nav__link header__nav-link" href="about.html">
                                 About
                             </a>
                         </li>
@@ -724,8 +724,8 @@
             <div class="touch__container section-gap">
                 <div class="container">
                     <div class="touch__inner">
-                        <img src="img/touch-circle-1.png" alt="" class="touch__circle touch__circle--left">
-                        <img src="img/touch-circle-2.png" alt="" class="touch__circle touch__circle--right">    
+                        <img src="img/touch-circle-1.png" alt="" class="touch__decoration touch__circle touch__circle--left">
+                        <img src="img/touch-circle-2.png" alt="" class="touch__decoration touch__circle touch__circle--right">    
                         <div class="touch__content">
                             <div class="touch__top-text title-label">
                                 get in touch
