added payment.html account.html thankyou.html

--- a/index.html
+++ b/index.html
@@ -737,9 +737,11 @@
                                 Be the first to learn about our latest trends and get exclusive
                             </div>
                             <form class="form touch__form">
-                                <label>
-                                    enter your email
-                                    <input type="text" class="form__field touch__form-input">
+                                <label class="form__field">
+                                    <span class="form__field-label">
+                                        enter your email    
+                                    </span>
+                                    <input type="text" class="form__field-input touch__form-input">
                                 </label>
                                 <button class="btn twobean-btn twobean-btn--roast-dark touch__form-submit" disabled>
                                     Subscribe
